--- a/rust/fast_spheres_core/Cargo.toml
+++ b/rust/fast_spheres_core/Cargo.toml
@@ -3,6 +3,11 @@ name = "fast_spheres_core"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = []
+parallel = ["dep:rayon"]
+
 [dependencies]
+rayon = { version = "1", optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
